Fix footer alignment

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -35,7 +35,3 @@
     }
   }
 }
-
-.footer-center {
-  margin-right: auto;
-}
